2020-08-03 Florian Pein, version 2.1-0

  * depends now on R-3.3.0 (digest requires it)

  * added import of package lowpassFilter

  * computeStat: added input checks for argument signal

  * removed Convolve.cpp (is not needed anymore because of import of lowpassFilter)

  * new exported function .testSmallScales: for developers only, users should look at the function improveSmallScales in the package clampSeg

  * new parametric families jsmurf, jsmurfPS, jsmurfLR, hjsmurf, hjsmurfSPS, hjsmurfLR, 2Param, LR: for developers only, users should look at the functions jsmurf and hilde in package clampSeg

2019-11-03 Florian Pein, version 2.0-4

  * new maintainer email adress

  * splitted keywords in stepR-package.Rd

2019-01-18 Florian Pein, version 2.0-3

  * added ties = mean to call of approxfun in thresh.smuceR to avoid warnings R-devel
    (reported with suggestion by Martin Maechler)
  
  * more informative error message when the length of weights is wrong in critVal.R

  * depends now on >= R-3.1.0 (imported packages have such a dependency)

2018-04-06 Florian Pein, version 2.0-2

  * new maintainer

  * removed packages in StepR.Rnw that are not required
  
  * added length(seed) == 1 to avoid if case with condition of length > 1 in monteCarloSimulation.R,
    updated tests in test-critVal.R, test-computeBounds.R, test-stepFit.R (reported by Tomas Kalibera)
    
  * updated references in stepR-package.Rd, comouteBounds.Rd, computeStat.Rd, critVal.Rd,
    monteCarloSimulation.Rd, parametricFamily.Rd, penalty.Rd, stepFit.Rd  
    
  * added references to description
  
  * added \donttest to intervalSystem.Rd

2017-05-19 Florian Pein, version 2.0-1

  * small changes in DESCRIPTION and stepR-package.Rd

  * added \donttest to stepR-package.Rd, computeBounds.Rd, critVal.Rs, monteCarloSimulation.Rd,
    stepFit.Rd because of long execution times


2017-05-15 Florian Pein, version 2.0-0

  NEW
  